[package]
name = "battler-wamprat-schema"
version = "0.3.1"
edition = "2024"
description = "Procedural macro for strongly-typed WAMP peers."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["wamp", "websocket", "peer", "schema"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-wamprat-schema"

[dependencies]
anyhow = { workspace = true }
battler-wamp = { workspace = true }
battler-wamprat = { workspace = true }
battler-wamprat-message = { workspace = true }

battler-wamprat-schema-proc-macro = "0.4.0"

[dev-dependencies]
assert_matches = { workspace = true }
battler-wamp-values = { workspace = true }
battler-wamprat-error = { workspace = true }
battler-wamprat-uri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
