[package]
name = "battler-wamprat"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0"
async-trait = "0.1.83"
battler-wamp = { path = "../battler-wamp" }
battler-wamprat-schema = { path = "battler-wamprat-schema" }
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
test-utils = { path = "../battler-wamp/test-utils" }
