[package]
name = "battler-wamprat"
version = "0.2.2"
edition = "2024"
description = "Asynchronous library for strongly-typed WAMP peer messaging."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["wamp", "websocket", "router", "peer"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-wamprat"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0"
async-trait = "0.1.83"
battler-wamp = "0.2.4"
battler-wamp-values = "0.1"
battler-wamprat-message = "0.1"
battler-wamprat-uri = "0.1"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
test-utils = { path = "../battler-wamp/test-utils" }
