[package]
name = "battler-wamprat"
version = "0.6.2"
edition = "2024"
description = "Asynchronous library for strongly-typed WAMP peer messaging."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["wamp", "websocket", "router", "peer"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-wamprat"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
battler-wamp = { workspace = true }
battler-wamp-values = { workspace = true }
battler-wamprat-error = { workspace = true }
battler-wamprat-message = { workspace = true }
battler-wamprat-uri = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }

test-utils = { path = "../battler-wamp/test-utils" }
