[package]
name = "battler"
version = "0.7.0"
edition = "2024"
description = "Pokémon battle engine for Rust."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_string_enum = { workspace = true }
thiserror = { workspace = true }
unicase = { workspace = true }
uuid = { workspace = true }
zone-alloc = { workspace = true }
zone-alloc-strong-handle-derive = { workspace = true }

battler-choice = { workspace = true }
battler-data = { workspace = true }
battler-prng = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

battler-test-utils = { path = "../battler-test-utils" }