[package]
name = "battler-multiplayer-service-schema"
version = "0.1.0"
edition = "2024"
description = "WAMP schema for managing multiplayer Pokémon battles in Rust."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["pokemon", "battle"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-multiplayer-service-schema"

[features]
typescript = ["dep:ts-rs", "battler-service-schema/typescript"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true, optional = true }

battler-wamp = { workspace = true }
battler-wamp-uri = { workspace = true }
battler-wamp-values = { workspace = true }
battler-wamprat = { workspace = true }
battler-wamprat-error = { workspace = true }
battler-wamprat-message = { workspace = true }
battler-wamprat-schema = { workspace = true }
battler-wamprat-uri = { workspace = true }

battler-service-schema = { path = "../../battler-service/battler-service-schema" }
