[package]
name = "battler-wamp-values"
version = "0.1.1"
edition = "2024"
description = "WAMP value types."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["wamp", "websocket"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-wamp/battler-wamp-values"

[dependencies]
ahash = "0.8.11"
battler-wamp-values-proc-macro = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.65"
