[package]
name = "battler-wamp-values"
version = "0.2.2"
edition = "2024"
description = "WAMP value types."
authors = ["Jackson Nestelroad <jackson@nestelroad.com>"]
keywords = ["wamp", "websocket"]
license = "MIT"
repository = "https://github.com/jackson-nestelroad/battler/tree/main/battler-wamp/battler-wamp-values"

[dependencies]
ahash = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

battler-wamp-values-proc-macro = "0.2.0"
